Fix layout being just bonkers broken on real device

--- a/src/Workflows/FlagsCollection/FlagsCollectionViewController.css
+++ b/src/Workflows/FlagsCollection/FlagsCollectionViewController.css
@@ -1,6 +1,5 @@
 .flagsCollectionRoot {
-    height: 100vh;
-    overflow: scroll;
+    
 }
 
 .flagsCollectionScrollContent {
